fix(omi-templates): ts error & can't change primary color in dark mode

--- a/packages/omi-templates/src/index.css
+++ b/packages/omi-templates/src/index.css
@@ -44,7 +44,7 @@ body {
   --popover: 222.2 84% 4.9%;
   --popover-foreground: 210 40% 98%;
 
-  --primary: 219 100% 43%;
+  /* --primary: 219 100% 43%; */
   --primary-foreground: 0 0% 85%;
 
   --secondary: 0, 0%, 40%;
